<resources>
    <string name="app_name">vku_demo</string>
    <string name="button_navigate_screen_second_text">Open screen 2</string>

    <string name="cong">+</string>
    <string name="save">save</string>
    <string name="enter_the_singer">Enter the singer</string>
    <string name="singer">Singer</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="name">Name</string>
    <string name="zing_mp3">Zing Mp3</string>

</resources>
