<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

<!--    <TextView
        android:id="@+id/tvPhoneReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="123456789" />-->
    <TextView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#56aaff"
        android:gravity="center"
        android:text="@string/zing_mp3"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="599dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/name"
            android:textColor="#005fbf"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/duongvien_goctron"
            android:hint="@string/enter_the_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#005fbf"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/singer"
            android:textColor="#005fbf"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/username1"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints="200"
            android:background="@drawable/duongvien_goctron"
            android:hint="@string/enter_the_singer"
            android:inputType="textPersonName"
            android:minHeight="0dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="412dp"
        android:layout_height="65dp"
        android:layout_marginEnd="108dp"
        android:background="#56aaff"
        android:backgroundTint="#56aaff"
        android:text="@string/save"
        android:textColor="#FAF6F6"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
